# NEA-mapping

./: .gitignore  README.md
docs/: AnalysisReport.md  Full document.docx  GraphTheoryResearch.md  HighLevelProjectStructure.md  InitialPlan.md  OSMconversionAlgorithm.md  ProjectObjectives.md  commit-log.txt  pandoc_generation.md  route finding pseudocode.txt  uml.txt
docs/Project-Purpose/: projectPurpose.md
docs/analysis/: AnalysisReport.md  DatabaseAndObjectStructure.md  DatabaseStructure.md  GraphTheoryResearch.md  HighLevelProjectStructure.md  ProjectObjectives.md
src/: MapAreasToImage.js  consts.js  convertFromOSM.js  index.js  logging.js  package-lock.json  package.json
src/api/: dbFromQuery.js  findRoute.js  getDBfromFile.js  getMapTilesList.js  getPaths.js  getTestDB.js  getTestOSMpoints.js  pointSearch.js
src/does_not_work_or_rejected/threadedOSMconvert/: OSMConvertRoadWayProcess.js  ThreadedConvertFromOSM.js
src/shared/: sharedStructures.js
src/web/: sharedStructures.js
src/web/index/: index.css  index.html  index.js
src_rust/: Cargo.toml
src_rust/src/: convert_from_osm.rs  db_manage.rs  db_manager.rs  map_objects.rs  server.rs
